--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.26.1",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.32.2",
     "react-router-dom": "^5.3.0",
