--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.24.0",
-    "framer-motion": "^4.1.17",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.26.1",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.32.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
     "styled-components": "^5.3.3",
     "styled-normalize": "^8.0.7",
     "uuid": "^8.3.2",
