--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "apexcharts": "^3.35.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.26.1",
     "react-icons": "^4.3.1",
