--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "daily-diet-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "apexcharts": "^3.35.0",
+    "axios": "^0.27.2",
     "lodash": "^4.17.21",
+    "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
     "react-apexcharts": "^1.4.0",
