--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.26.1",
+    "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.32.2",
     "react-redux": "^7.2.6",
