--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.3",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.12.0",
     "redux": "^4.1.2",
     "styled-components": "^5.3.3",
     "styled-normalize": "^8.0.7",
