--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-intersection-observer": "^8.32.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.3",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.12.0",
     "redux": "^4.1.2",
